# nasdaq-itch-binary-parser

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
cmake/: Dependencies.cmake  StandartProjectSettings.cmake
src/: CMakeLists.txt  main.cpp
src/entities/: CMakeLists.txt  types.hxx
src/exceptions/: CMakeLists.txt  parse_error.hxx
src/parser/: CMakeLists.txt  itch_parser.cpp  itch_parser.hxx
src/reader/: CMakeLists.txt  binary_file_reader.cpp  binary_file_reader.hxx
